Fix: proper scale in validation and plots

--- a/main.ipynb
+++ b/main.ipynb
@@ -207,15 +207,20 @@
     "for batch in val_loader:\n",
     "    input = batch['input'].to(DEVICE)\n",
     "    target = batch['target'].to(DEVICE)\n",
+    "    mean = batch['mean'].to(DEVICE)\n",
+    "    std = batch['std'].to(DEVICE)\n",
     "\n",
     "    pred = model(input)\n",
+    "    \n",
+    "    # Add dimension for broadcasting: (batch, features) -> (batch, features, 1)\n",
+    "    pred = pred * std.unsqueeze(-1) + mean.unsqueeze(-1)\n",
+    "    target = target * std.unsqueeze(-1) + mean.unsqueeze(-1)\n",
     "    loss = torch.nn.functional.mse_loss(pred, target)\n",
     "    val_loss += loss.item()\n",
     "    print(f'Validation Loss: {loss.item():.4f}')\n",
     "\n",
     "avg_val_loss = val_loss / len(val_loader)\n",
-    "print(f'Average Validation Loss: {avg_val_loss:.4f}')\n",
-    "\n"
+    "print(f'Average Validation Loss: {avg_val_loss:.4f}')\n"
    ]
   },
   {
@@ -223,24 +228,72 @@
    "execution_count": null,
    "id": "f834bacb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'val_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m idx = \u001b[32m0\u001b[39m\n\u001b[32m      2\u001b[39m feature_idx = \u001b[32m0\u001b[39m  \u001b[38;5;66;03m# Prima feature (OT)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28minput\u001b[39m = \u001b[43mval_dataset\u001b[49m[idx][\u001b[33m'\u001b[39m\u001b[33minput\u001b[39m\u001b[33m'\u001b[39m].unsqueeze(\u001b[32m0\u001b[39m).to(DEVICE)\n\u001b[32m      5\u001b[39m target = val_dataset[idx][\u001b[33m'\u001b[39m\u001b[33mtarget\u001b[39m\u001b[33m'\u001b[39m].unsqueeze(\u001b[32m0\u001b[39m).to(DEVICE)\n\u001b[32m      6\u001b[39m mean = val_dataset[idx][\u001b[33m'\u001b[39m\u001b[33mmean\u001b[39m\u001b[33m'\u001b[39m].to(DEVICE).unsqueeze(-\u001b[32m1\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'val_dataset' is not defined"
+     ]
+    }
+   ],
    "source": [
     "idx = 0\n",
+    "feature_idx = 0\n",
     "\n",
     "input = val_dataset[idx]['input'].unsqueeze(0).to(DEVICE)\n",
     "target = val_dataset[idx]['target'].unsqueeze(0).to(DEVICE)\n",
-    "pred = model(input)\n",
-    "pred = pred.cpu().squeeze().numpy()\n",
-    "target = target.cpu().squeeze().numpy()\n",
+    "mean = val_dataset[idx]['mean'].to(DEVICE).unsqueeze(-1)\n",
+    "std = val_dataset[idx]['std'].to(DEVICE).unsqueeze(-1)\n",
     "\n",
+    "pred = model(input)\n",
+    "\n",
+    "# Denormalize\n",
+    "pred = pred * std + mean\n",
+    "target = target * std + mean\n",
+    "\n",
+    "# Convert to numpy and select single feature\n",
+    "pred = pred.cpu().squeeze(0).numpy()  # Shape: (features, horizon)\n",
+    "target = target.cpu().squeeze(0).numpy()  # Shape: (features, horizon)\n",
+    "\n",
+    "# Plot single feature\n",
     "plt.figure(figsize=(12, 6))\n",
-    "plt.plot(pred, label='Predicted', marker='o')\n",
-    "plt.plot(target, label='Actual', marker='x')\n",
-    "plt.title('Predicted vs Actual Values')\n",
+    "plt.plot(pred[feature_idx], label='Predicted', marker='o')\n",
+    "plt.plot(target[feature_idx], label='Actual', marker='x')\n",
+    "plt.title(f'Predicted vs Actual Values - Feature {feature_idx}')\n",
     "plt.xlabel('Time Steps')\n",
     "plt.ylabel('Value')\n",
     "plt.legend()\n",
     "plt.grid()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a083f43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplots(4, 2, figsize=(15, 20))\n",
+    "\n",
+    "features = ['OT', 'HUFL', 'HULL', 'MUFL', 'MULL', 'LUFL', 'LULL', 'OTHR']\n",
+    "\n",
+    "for feature_idx in range(pred.shape[0]):\n",
+    "    plt.subplot(4, 2, feature_idx + 1)\n",
+    "    plt.plot(pred[feature_idx], label='Predicted', marker='o')\n",
+    "    plt.plot(target[feature_idx], label='Actual', marker='x')\n",
+    "    plt.title(f'{features[feature_idx]} - Predicted vs Actual')')\n",
+    "    plt.xlabel('Time Steps')\n",
+    "    plt.ylabel('Value')\n",
+    "    plt.legend()\n",
+    "    plt.grid()\n",
+    "plt.tight_layout()\n",
+    "plt.sav\n",
     "plt.show()"
    ]
   }
